# rabex-env

./: .gitignore  Cargo.toml  README.md  addressables.dot  bundleinfo.json
.zed/: tasks.json
benches/: README.md  bench.rs  justfile
crates/rabex-env-steam-depot-vfs/: Cargo.toml
crates/rabex-env-steam-depot-vfs/examples/: bundle_dump.rs  dump_serialized.rs  load_addressables.rs  silksong_shaders.rs  steam-vfs-integration.rs  steam_vfs_integration.rs
crates/rabex-env-steam-depot-vfs/src/: lib.rs
crates/rabex-env-testkit/: Cargo.toml
crates/rabex-env-testkit/src/: lib.rs
crates/rabex-jq/: Cargo.toml
crates/rabex-jq/src/: defs.jq  enrich.rs  lib.rs  pptr.rs  query.rs  scenes.rs
crates/rabex-jq/tests/: game.rs
examples/: addressable_scripts.rs  addressables_bundle_locations.rs  addressables_bundle_names.rs  addressables_catalog.rs  addressables_repro.rs  addressables_scripts.rs  addressables_stats.rs  all_steam_games.rs  build_pptr_map.rs  build_pptr_map_targetted.rs  compare_typetree_backends.rs  create_empty_assetbundle.rs  find_references.rs  find_unreferenced_objects.rs  load_all_files.rs  print_data.rs  readme.rs  repack.rs  repack_assetbundle.rs  repro.rs  repro_preloads.rs  repro_preloads_scene.rs  repro_repack.rs  script_count.rs  test_roundtrip_serialization.rs  testing.rs  unity2rust.rs  unity2rust.toml  who_references_addressable.rs  who_references_pathid.rs
examples/utils/: mod.rs
src/: addressables.rs  component_path.rs  env.rs  game_files.rs  handle.rs  lib.rs  prune.rs  qualify.rs  reachable.rs  resolver.rs  scene_lookup.rs  trace_pptr.rs  typetree_generator_cache.rs  typetree_merge.rs  utils.rs
src/addressables/: archive_path.rs  binary_catalog.rs  mod.rs  settings.rs
src/reachable/: mod.rs  prune.rs
src/resolver/: game_files.rs  mem.rs  mod.rs
src/unity/: mod.rs  types.rs
src/unity/types/: utils.rs
tests/: qualify.rs
tests/fixtures/: mod.rs
