[package]
name = "rabex-env"
version = "0.1.0"
edition = "2024"


[features]
serde_path_to_error = ["rabex/serde_path_to_error"]

[dependencies]
anyhow = "1.0"
elsa = "1.11"
indexmap = { version = "2.11", features = ["serde"] }
memmap2 = "0.9"
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", branch = "all", default-features = false, features = [
    "embed-tpk",
] }
rustc-hash = "2.1"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
typetree-generator-api = { git = "https://github.com/jakobhellermann/typetree-generator-api-bindings" }
rayon = "1.11"
serde_json = "1.0"
walkdir = "2.5"
byteorder = "1.5.0"

[dev-dependencies]
csv = "1.3"
serde_repr = "0.1"
steamlocate = "2.0"

# [patch."https://github.com/jakobhellermann/RustyAssetBundleEXtractor"]
# rabex = { path = "../RustyAssetBundleEXtractor" }
