[package]
name = "rabex-env"
version = "0.1.0"
edition = "2024"


[features]
serde_path_to_error = ["rabex/serde_path_to_error"]
tracing-instrument = []

[dependencies]
anyhow = "1.0"
elsa = "1.11"
indexmap = { version = "2.11", features = ["serde"] }
memmap2 = "0.9"
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", default-features = false, features = [
  "embed-tpk",
] }
rustc-hash = "2.1"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
unity-typetree-gen = { git = "https://github.com/jakobhellermann/unity-typetree-gen" }
rayon = "1.11"
serde_json = { version = "1.0", features = ["preserve_order"] }
walkdir = "2.5"
byteorder = "1.5.0"
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = "0.7"
csv = "1.3"
serde_repr = "0.1"
steamlocate = "2.0"
tracing-timetree = { git = "https://github.com/jakobhellermann/tracing-timetree" }
typetree2ksy = { git = "https://github.com/jakobhellermann/typetree2ksy" }
# Only for the backend comparison example (native AssetsTools generator).
typetree-generator-api = { git = "https://github.com/jakobhellermann/typetree-generator-api-bindings" }
serde-value = { git = "https://github.com/jakobhellermann/serde-value", branch = "preserve-order", features = [
  "preserve_order",
] }


[[bench]]
name = "bench"
harness = false

[lib]
bench = false

# [patch."https://github.com/jakobhellermann/RustyAssetBundleEXtractor"]
# rabex = { path = "../RustyAssetBundleEXtractor" }
# [patch."https://github.com/jakobhellermann/typetree2ksy"]
# typetree2ksy = { path = "../typetree2ksy" }
# [patch."https://github.com/jakobhellermann/steam-depot-vfs"]
# steam-depot-vfs = { path = "/home/jakob/dev/rust/contrib/steam/steam-depot-vfs/crates/steam-depot-vfs" }

[workspace]
members = [".", "crates/*"]

# needed for the steam-depot-vfs reference
[patch."https://github.com/jakobhellermann/rabex-env"]
rabex-env = { path = "." }
